--- a/7lalak/Base.lproj/Main_iPhone.storyboard
+++ b/7lalak/Base.lproj/Main_iPhone.storyboard
@@ -63,7 +63,7 @@
             </objects>
             <point key="canvasLocation" x="1585" y="-261"/>
         </scene>
-        <!--More ContainerVC - more-->
+        <!--More ContainerVC - More-->
         <scene sceneID="CWW-a5-4UY">
             <objects>
                 <viewController id="hgq-vX-QFt" customClass="MoreContainerVC" sceneMemberID="viewController">
@@ -86,9 +86,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="more" image="ic_more_normal.png" id="Arq-bH-MYh">
-                        <inset key="imageInsets" minX="10" minY="12" maxX="6" maxY="6"/>
-                    </tabBarItem>
+                    <tabBarItem key="tabBarItem" title="More" image="ic_home_more.png" id="Arq-bH-MYh"/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -474,9 +472,7 @@
                             <constraint firstItem="A2S-IR-Ekg" firstAttribute="top" secondItem="lI5-9m-Dyc" secondAttribute="bottom" constant="473" id="zPq-zZ-M2e"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Offers" image="ic_offers_selected.png" id="Ll7-FC-s3U">
-                        <inset key="imageInsets" minX="9" minY="13" maxX="8" maxY="8"/>
-                    </tabBarItem>
+                    <tabBarItem key="tabBarItem" title="Offers" image="ic_home_offers.png" id="Ll7-FC-s3U"/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <size key="freeformSize" width="320" height="518"/>
@@ -488,10 +484,10 @@
             </objects>
             <point key="canvasLocation" x="657" y="1067"/>
         </scene>
-        <!--MediaVC - Media-->
+        <!--PlayerVC - Media-->
         <scene sceneID="ot8-2e-RuS">
             <objects>
-                <viewController storyboardIdentifier="player4s" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QUy-BD-bpt" customClass="MediaVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="player4s" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QUy-BD-bpt" customClass="FSPlayerVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="vYD-gL-kzJ"/>
                         <viewControllerLayoutGuide type="bottom" id="5Dd-0g-VCq"/>
@@ -527,7 +523,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CQh-PU-Bzu">
-                                                <rect key="frame" x="12" y="12" width="30" height="30"/>
+                                                <rect key="frame" x="11" y="12" width="30" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" backgroundImage="img_btn_backward.png">
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -540,6 +536,16 @@
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wvc-zI-9qz">
+                                                <rect key="frame" x="79" y="0.0" width="55" height="52"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" image="img_btn_pause.png">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="pause:" destination="QUy-BD-bpt" eventType="touchUpInside" id="8EV-xJ-MAV"/>
+                                                </connections>
+                                            </button>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihE-EK-HKU">
                                                 <rect key="frame" x="78" y="0.0" width="55" height="52"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -547,6 +553,9 @@
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                                 <state key="selected" backgroundImage="img_btn_pause.png"/>
+                                                <connections>
+                                                    <action selector="play:" destination="QUy-BD-bpt" eventType="touchUpInside" id="ezw-ey-45S"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
@@ -554,12 +563,8 @@
                                 </subviews>
                                 <rect key="contentStretch" x="0.050000000000000017" y="0.0" width="1" height="1"/>
                             </view>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" placeholderIntrinsicWidth="150" placeholderIntrinsicHeight="6" progressImage="img_seekbar_progress_blue.png" trackImage="img_seekbar_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="XKF-Gk-6sa">
-                                <rect key="frame" x="49" y="336" width="236" height="6"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </progressView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ic_defualt_image.png" translatesAutoresizingMaskIntoConstraints="NO" id="yDI-hI-U8J">
-                                <rect key="frame" x="79" y="152" width="163" height="151"/>
+                                <rect key="frame" x="97" y="158" width="126" height="111"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RVB-nY-tqB">
@@ -584,23 +589,47 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Vg-yA-uHw">
+                                <rect key="frame" x="175" y="316" width="106" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="tfB-Hg-5Gl">
+                                <rect key="frame" x="27" y="285" width="256" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="seek:" destination="QUy-BD-bpt" eventType="valueChanged" id="OHs-O4-efx"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="262" translatesAutoresizingMaskIntoConstraints="NO" id="VW6-Oz-OCu">
+                                <rect key="frame" x="34" y="103" width="262" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Media" image="ic_more_media_normal.png" id="Z7h-1E-pvt">
-                        <inset key="imageInsets" minX="7" minY="6" maxX="6" maxY="6"/>
-                    </tabBarItem>
+                    <tabBarItem key="tabBarItem" title="Media" image="ic_home_media.png" id="Z7h-1E-pvt"/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <size key="freeformSize" width="320" height="519"/>
                     <connections>
-                        <outlet property="holder" destination="LML-4g-Gae" id="pJu-Qk-ewC"/>
-                        <outlet property="ios5View" destination="juj-6p-Hbe" id="rct-Bo-EWp"/>
+                        <outlet property="currentPlaybackTime" destination="3Vg-yA-uHw" id="7an-vJ-fAN"/>
+                        <outlet property="holder" destination="LML-4g-Gae" id="g8w-jf-6ej"/>
+                        <outlet property="ios5View" destination="juj-6p-Hbe" id="7gX-C6-hkY"/>
+                        <outlet property="pauseButton" destination="Wvc-zI-9qz" id="1JN-ca-3qQ"/>
+                        <outlet property="playButton" destination="ihE-EK-HKU" id="7zZ-xy-DGU"/>
+                        <outlet property="progressSlider" destination="tfB-Hg-5Gl" id="lY4-Ne-AVM"/>
+                        <outlet property="statusLabel" destination="VW6-Oz-OCu" id="QCg-vV-DNb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3qq-4t-Ow8" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="651" y="417"/>
+            <point key="canvasLocation" x="657" y="417"/>
         </scene>
         <!--Home PageVC - 7lalek-->
         <scene sceneID="i6l-E0-WSx">
@@ -906,7 +935,7 @@
                                 </connections>
                             </segmentedControl>
                             <containerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bB0-bL-bRu">
-                                <rect key="frame" x="0.0" y="41" width="320" height="586"/>
+                                <rect key="frame" x="0.0" y="28" width="320" height="586"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </containerView>
                         </subviews>
@@ -958,7 +987,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="370"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="rcO-dw-zWO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="rcO-dw-zWO">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="370"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -1244,9 +1273,7 @@
         <scene sceneID="W8Q-in-rcJ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="gPl-D3-kqD" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Home" image="home_normal.png" id="u1e-5L-l1D">
-                        <inset key="imageInsets" minX="7" minY="6" maxX="6" maxY="6"/>
-                    </tabBarItem>
+                    <tabBarItem key="tabBarItem" title="Home" image="ic_home_Ads.png" id="u1e-5L-l1D"/>
                     <toolbarItems/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
@@ -1510,11 +1537,11 @@
         <image name="btn_favo.png" width="543" height="99"/>
         <image name="btn_message.png" width="540" height="97"/>
         <image name="btn_whatsapp.png" width="537" height="97"/>
-        <image name="home_normal.png" width="40" height="40"/>
         <image name="ic_defualt_image.png" width="521" height="520"/>
-        <image name="ic_more_media_normal.png" width="48" height="48"/>
-        <image name="ic_more_normal.png" width="40" height="40"/>
-        <image name="ic_offers_selected.png" width="48" height="48"/>
+        <image name="ic_home_Ads.png" width="32" height="32"/>
+        <image name="ic_home_media.png" width="24" height="21"/>
+        <image name="ic_home_more.png" width="16" height="16"/>
+        <image name="ic_home_offers.png" width="32" height="32"/>
         <image name="img_7lalek.png" width="478" height="479"/>
         <image name="img_btn_backward.png" width="72" height="72"/>
         <image name="img_btn_forward.png" width="72" height="72"/>
@@ -1523,8 +1550,6 @@
         <image name="img_btn_play.png" width="120" height="120"/>
         <image name="img_btn_playlist.png" width="48" height="48"/>
         <image name="img_btn_previous_pressed.png" width="72" height="72"/>
-        <image name="img_seekbar_bg.png" width="32" height="32"/>
-        <image name="img_seekbar_progress_blue.png" width="32" height="32"/>
         <image name="track_info_bg.png" width="38" height="53"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
